--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,37 @@
   position: fixed; 
   justify-content: space-around;
   width: 100%; 
+  background-color: #fff;
+}
+
+.inner{
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.header__inner{
+  display: flex;
+  justify-content: space-between;
+}
+
+.bolt__logo{
+  display: inline-block;
 }
 
 .contact__btn{
+  display: inline-block;
   padding: 14px 12px;
   font-size: 12px;
   background-color: #74cfae;
   color: #fff;
+  vertical-align: top;
+  text-decoration: none;
+}
+
+.contact__btn:hover{
+  color: #333;
+  transition: color 0.3s;
+  cursor : pointer;
 }
 
 .main{
@@ -49,10 +73,15 @@
   background-color: #74cfae;
   padding-top: 50px;
   color: #fff;
+  width: 100%; 
 }
 
+
 .what_we_can_do__text{
+  vertical-align: top;
+  display: inline-block;
   text-align: center;
+  margin-left: 100px
 }
 
 .what_we_can_do__title{
@@ -71,7 +100,9 @@
   text-align: center;
   padding-top: 60px;
   padding-bottom: 70px;
+  width: 100%; 
 }
+
 
 .our_latest_work__title{
   
@@ -80,11 +111,21 @@
 }
 
 .our_latest_work__imgs{
+  margin: 0 auto;
   float: left;
   padding-top: 40px;
   padding-bottom: 90px;
   font-size: 0;
   line-height: 0;
+}
+
+.our_latest_work__common{
+  opacity: 0.7;
+}
+
+.our_latest_work__common:hover{
+  opacity: 1.0;
+  transition: opacity 0.3s;
 }
 
 .our_latest_work__imgs > img{
@@ -110,22 +151,31 @@
 }
 
 .email__btn{
+  display: inline-block;
+  vertical-align: top;
   font-size: 12px;
   padding: 14px 20px;
   background-color: #74cfae;
-  /* float: left; */
   color: #fff;
+}
+
+.email__btn:hover{
+  color: #333;
+  transition: color 0.3s;
+  cursor : pointer;
 }
 
 .our_skills{
   background-color: #333;
   padding-top: 70px;
   padding-bottom: 100px;
+  width: 100%;
 }
 
 .our_skills_text{
   color: #fff;
   text-align: center;
+  padding-bottom: 70px;
 }
 
 .our_skills_imgs{
@@ -136,6 +186,10 @@
 
 .our_skills_common{
   text-align: center;
+}
+
+.our_skills_img{
+  padding-bottom: 10px;
 }
 
 .our_skills_circle{
@@ -157,20 +211,34 @@
 }
 
 .sns_icons{
-  font-size: 0;
+  /* font-size: 0; */
 }
 
 .sns_icons__common{
   display: inline-block;
   width: 185px;
-  background-color: #fff;
   color: #74cfae;
-  font-size:12px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.sns_icons__common:hover{
+  background-color: #fff;
+
+  /* 0.3秒かけて背景色をアニメーションさせる */
+  transition: background-color 0.3s;
 }
 
 .footer{
+  text-align: right;
   padding-top: 20px;
   padding-bottom: 25px;
   background-color: #74cfae;
   color: #fff;
+  width: 100%;
+}
+
+.footer__text{
+  display: inline-block;
+  text-align: right;
 }
