--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@
 
 .bolt__title{
   font-size: 90px;
-  font-weight: 700px;
+  font-weight: 700;
   color: #74cfae;
 }
 
@@ -105,7 +105,6 @@
 
 
 .our_latest_work__title{
-  
   font-size: 24px;
   font-family: 'Raleway', sans-serif;
 }
@@ -172,10 +171,12 @@
   width: 100%;
 }
 
-.our_skills_text{
+.our_skills_title{
   color: #fff;
   text-align: center;
   padding-bottom: 70px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 24px;
 }
 
 .our_skills_imgs{
