--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ a{
   clear: both;
 }
 
-.header{
+/* .header{
   display: flex;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -78,7 +78,82 @@ a{
   font-size: 30px;
   margin-top: 20px;
   color: #c0c0c0;
-}
+} */
+
+/* PC */
+@media screen and (min-width:1200px){
+  .header{
+    display: flex;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    position: fixed; 
+    justify-content: space-around;
+    width: 100%; 
+    background-color: #fff;
+    z-index: 1;
+  }
+  
+  .inner{
+    width: 1100px;
+    margin: 0 auto;
+  }
+  
+  .header__inner{
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .bolt__logo{
+    display: inline-block;
+  }
+  
+  .bamburger__icon{
+    visibility: hidden;
+  }
+
+  .contact__btn{
+    display: inline-block;
+    padding: 14px 12px;
+    font-size: 12px;
+    background-color: #74cfae;
+    color: #fff;
+    vertical-align: top;
+  }
+  
+  .contact__btn:hover{
+    color: #333;
+    transition: color 0.3s;
+    cursor : pointer;
+  }
+  
+  .main{
+    padding-top: 70px;
+  }
+  
+  .bolt-theme{
+    background-color: #f2f2f2;
+    padding-top: 250px;
+    padding-bottom: 250px;
+    text-align: center;
+    font-family: Raleway;
+  }
+  
+  .bolt__title{
+    font-size: 90px;
+    font-weight: 700;
+    color: #74cfae;
+  }
+  
+  .br-sp{
+    display: none;
+  }
+
+  .bolt__subtitle{
+    font-size: 30px;
+    margin-top: 20px;
+    color: #c0c0c0;
+  }
+  
 
 .what_we_can_do{
   background-color: #74cfae;
@@ -149,25 +224,37 @@ a{
 }
 
 .our_latest_work__link{
+  margin-left: 100px;
   margin-top: 80px;
+}
+
+.our_latest_work__link:first-child{
+  margin-left: 0;
+}
+
+
+.our_latest_work__link:nth-child(3n+4){
+  margin-left: 0;
 }
 
 .our_latest_work__link:nth-child(-n+3){
   margin-top: 0;
 }
 
-.our_latest_work__link:nth-child(3n-1){
+/* .our_latest_work__link:nth-child(3n-1){
   margin-left: 100px;
   margin-right: 100px;
-}
+} */
 
 .our_latest_work__footer{
   margin: 0 auto;
+  font-size: 0;
 }
 
 .our_latest_work__text{
   display: inline-block;
   margin-right: 90px;
+  font-size: 20px;
 }
 
 .email__btn{
@@ -262,4 +349,509 @@ a{
 .footer__text{
   display: inline-block;
   text-align: right;
+}
+}
+
+/* TAB */
+@media screen and (min-width:768px) and (max-width:1199px){
+  .header{
+    display: flex;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    position: fixed; 
+    justify-content: space-around;
+    width: 100%; 
+    background-color: #fff;
+    z-index: 1;
+  }
+  
+  .inner{
+    width: 97%;
+    margin: 0 auto;
+  }
+  
+  .header__inner{
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .bolt__logo{
+    display: inline-block;
+  }
+
+  .bamburger__icon{
+    visibility: hidden;
+  }
+  
+  .contact__btn{
+    display: inline-block;
+    padding: 14px 12px;
+    font-size: 12px;
+    background-color: #74cfae;
+    color: #fff;
+    vertical-align: top;
+  }
+  
+  .contact__btn:hover{
+    color: #333;
+    transition: color 0.3s;
+    cursor : pointer;
+  }
+  
+  .main{
+    padding-top: 70px;
+  }
+  
+  .bolt-theme{
+    background-color: #f2f2f2;
+    padding-top: 250px;
+    padding-bottom: 250px;
+    text-align: center;
+    font-family: Raleway;
+  }
+  
+  .bolt__title{
+    font-size: 90px;
+    font-weight: 700;
+    color: #74cfae;
+  }
+  
+  .br-sp{
+    display: none;
+  }
+
+  .bolt__subtitle{
+    font-size: 30px;
+    margin-top: 20px;
+    color: #c0c0c0;
+  }
+  
+
+  .what_we_can_do{
+    background-color: #74cfae;
+    padding-top: 50px;
+    padding-bottom: 25px;
+    color: #fff;
+    width: 100%; 
+    text-align: center;
+  }
+
+  .what_we_can_do_img{
+    display: block;
+    margin: 0 auto;
+  }
+  
+  .what_we_can_do__text{
+    display: inline-block;
+  }
+  
+  .what_we_can_do__title{
+    font-family: 'Raleway', sans-serif;
+    font-size: 24px;
+    margin-top: 20px;
+    display: inline-block;
+  }
+  
+  .what_we_can_do__subtitle{
+    margin-top: 35px;
+    font-size: 20px;
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+  
+  .our_latest_work{
+    padding-top: 60px;
+    padding-bottom: 70px;
+    text-align: center;
+  }
+
+  .our_latest_work__title{
+    
+    font-size: 24px;
+    font-family: 'Raleway', sans-serif;
+  }
+  
+  .our_latest_work__imgs{
+    display: block;
+    margin-top: 40px;
+    margin-bottom: 80px;
+    font-size: 0;
+    line-height: 0;
+    z-index: 0;
+  }
+  
+  .our_latest_work__link{
+    display: block;
+  }
+  
+  .our_latest_work__common{
+    opacity: 0.7;
+    transition: opacity 0.3s;
+  }
+  
+  .our_latest_work__common:hover{
+    opacity: 1.0;
+  }
+  
+  .our_latest_work__link:first-child{
+    margin-top: 0;
+  }
+  
+  .our_latest_work__link:nth-child(3n+4){
+    margin-top: 80px;
+  } 
+  
+  .our_latest_work__footer{
+    display: block;
+    margin: 0 auto;
+    font-size: 0;
+  }
+  
+  .our_latest_work__text{
+    display: block;
+    font-size: 20px;
+    margin-bottom: 40px;
+  }
+  
+  .br-pc{
+    display: none;
+  }
+
+  .email__btn{
+    display: inline-block;
+    font-size: 12px;
+    padding: 14px 20px;
+    background-color: #74cfae;
+    color: #fff;
+  }
+  
+  .email__btn:hover{
+    color: #333;
+    transition: color 0.3s;
+    cursor : pointer;
+  }
+  
+  .our_skills{
+    background-color: #333;
+    padding-top: 70px;
+    padding-bottom: 100px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .our_skills_title{
+    color: #fff;
+    text-align: center;
+    margin-bottom: 35px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 24px;
+  }
+  
+  .our_skills_imgs{
+    display: flex;
+    justify-content: space-around;
+    font-size: 16px;
+  }
+  
+  
+  .our_skills_img{
+    padding-bottom: 10px;
+  }
+  
+  .our_skills_circle{
+    color: #fff;
+    margin-top: 88px;
+  }
+  
+  .our_skills_circle:first-child{
+    margin-top: 0;
+  }
+  
+  .sns__links{
+    text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-color: #f2f2f2;
+  }
+  
+  .sns_icons{
+    /* font-size: 0; */
+  }
+  
+  .sns_icons__common{
+    display: inline-block;
+    width: 185px;
+    color: #74cfae;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    /* 0.3秒かけて背景色をアニメーションさせる */
+    transition: background-color 0.3s;
+  }
+  
+  .sns_icons__common:hover{
+    background-color: #fff;
+  }
+  
+  .footer{
+    text-align: right;
+    padding-top: 20px;
+    padding-bottom: 25px;
+    background-color: #74cfae;
+    color: #fff;
+    width: 100%;
+  }
+  
+  .footer__text{
+    display: inline-block;
+    text-align: right;
+  }
+  
+}
+
+/* SP */
+@media screen and (max-width:767px){
+  .header{
+    display: flex;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    position: fixed; 
+    justify-content: space-around;
+    width: 100%; 
+    background-color: #fff;
+    z-index: 1;
+  }
+
+  .inner{
+    width: 97%;
+    margin: 0 auto;
+  }
+
+  .header__inner{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .bolt__logo{
+    display: inline-block;
+    float: left;
+    /* zoom: 2; */
+  }
+  .contact__btn{
+    display: none;
+  }
+
+  .bamburger__icon{
+    color: #c0c0c0;
+    display: inline-block;
+    /* height: 14px;
+    margin-top: 10px; */
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+  }
+  .main{
+    /* padding-top: 70px; */
+  }
+  
+  .bolt-theme{
+    background-color: #f2f2f2;
+    padding-top: 160px;
+    padding-bottom: 130px;
+    text-align: center;
+    font-family: Raleway;
+  }
+  
+  .bolt__title{
+    font-size: 80px;
+    font-weight: 700;
+    color: #74cfae;
+  }
+
+  
+  .bolt__subtitle{
+    font-size: 30px;
+    margin-top: 20px;
+    color: #c0c0c0;
+  }
+
+  .what_we_can_do{
+    background-color: #74cfae;
+    padding-top: 50px;
+    padding-bottom: 25px;
+    color: #fff;
+    width: 100%; 
+    text-align: center;
+  }
+
+  .what_we_can_do_img{
+    display: block;
+    margin: 0 auto;
+  }
+  
+  .what_we_can_do__text{
+    display: inline-block;
+  }
+  
+  .what_we_can_do__title{
+    font-family: 'Raleway', sans-serif;
+    font-size: 24px;
+    margin-top: 20px;
+    display: inline-block;
+  }
+  
+  .what_we_can_do__subtitle{
+    margin-top: 35px;
+    font-size: 20px;
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .our_latest_work{
+    padding-top: 60px;
+    padding-bottom: 70px;
+    text-align: center;
+  }
+
+  .our_latest_work__title{
+    
+    font-size: 24px;
+    font-family: 'Raleway', sans-serif;
+  }
+  
+  .our_latest_work__imgs{
+    display: block;
+    margin-top: 40px;
+    margin-bottom: 80px;
+    font-size: 0;
+    line-height: 0;
+    z-index: 0;
+  }
+  
+  .our_latest_work__link{
+    display: block;
+  }
+  
+  .our_latest_work__common{
+    opacity: 0.7;
+    transition: opacity 0.3s;
+  }
+  
+  .our_latest_work__common:hover{
+    opacity: 1.0;
+  }
+  
+  .our_latest_work__link:first-child{
+    margin-top: 0;
+  }
+  
+  .our_latest_work__link:nth-child(3n+4){
+    margin-top: 80px;
+  } 
+  
+  .our_latest_work__footer{
+    display: block;
+    margin: 0 auto;
+    font-size: 0;
+  }
+  
+  .our_latest_work__text{
+    display: block;
+    font-size: 20px;
+    margin-bottom: 40px;
+  }
+
+  .br-pc{
+    display: none;
+  }
+  
+  .email__btn{
+    display: inline-block;
+    font-size: 12px;
+    padding: 14px 20px;
+    background-color: #74cfae;
+    color: #fff;
+  }
+  
+  .email__btn:hover{
+    color: #333;
+    transition: color 0.3s;
+    cursor : pointer;
+  }
+
+  .our_skills{
+    background-color: #333;
+    padding-top: 70px;
+    padding-bottom: 100px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .our_skills_title{
+    color: #fff;
+    text-align: center;
+    margin-bottom: 35px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 24px;
+  }
+  
+  .our_skills_imgs{
+    display: flex;
+    justify-content: space-around;
+    font-size: 16px;
+  }
+  
+  .our_skills_img{
+    padding-bottom: 10px;
+  }
+  
+  .our_skills_circle{
+    color: #fff;
+    margin-top: 88px;
+  }
+  
+  .our_skills_circle:first-child{
+    margin-top: 0;
+  }
+
+  .sns__links{
+    text-align: center;
+    padding-top: 50px;
+    background-color: #f2f2f2;
+  }
+  
+  .sns_icons{
+    /* font-size: 0; */
+  }
+  
+  .sns_icons__common{
+    margin: 0 auto;
+    display: block;
+    /* width: 185px; */
+    /* margin-left: 15px;
+    margin-right: 15px; */
+    color: #74cfae;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    /* 0.3秒かけて背景色をアニメーションさせる */
+    transition: background-color 0.3s;
+  }
+  
+  .sns_icons__common:hover{
+    background-color: #fff;
+  }
+  
+  .footer{
+    text-align: right;
+    padding-top: 20px;
+    padding-bottom: 25px;
+    background-color: #74cfae;
+    color: #fff;
+    width: 100%;
+  }
+  
+  .footer__text{
+    display: inline-block;
+    text-align: right;
+  }
 }
