boltのレスポンシブサイトが完成しました!!

--- a/css/style.css
+++ b/css/style.css
@@ -334,12 +334,13 @@
     margin: 0 auto;
   }
   
-  /* .what_we_can_do__text{
+  .what_we_can_do__text{
     display: inline-block;
-  } */
+    margin-top: 20px;
+  }
   
   .what_we_can_do__title{
-    margin-top: 20px;
+    
     margin-bottom: 35px;
   }
 
@@ -369,6 +370,7 @@
   
   .our_latest_work__text{
     display: block;
+    margin-top: 20px;
     margin-bottom: 40px;
   }
   
